# finance_tracker

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
.sqlx/: query-39884c4e07ddff657af73a5a6dc9885b505c5727be157f4863dc6ef6e1dfc697.json  query-39bd00a2b211dd3cae67a889ccd45494d2125ca0c6d5ddda68427adbdb7ac190.json  query-83ee8c3d8e78277c68e9b26bb7354cfee6812b34180cb550d10399eb5a138e21.json  query-d28779707a3b5c10184d90e24cdd3d89575e72534962cadc940c946ba64d2f04.json
frontend/src/: App.tsx  Dashboard.tsx  MessageDisplay.tsx  login.ts  register.ts  utils.ts
frontend/src/api/: login.ts  register.ts
migrations/: 20260515205058_init.sql
src/: auth.rs  balance.rs  create_user.rs  db.rs  login.rs  main.rs  register.rs  transaction.rs  transactions.rs
tests/: integration_tests.rs
