[package]
name = "finance_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "bigdecimal"] }
argon2 = "0.5"
jsonwebtoken = "10.3"
dotenvy = "0.15"
tracing = "0.1"
chrono = {  version = "0.4", features = ["serde"] }
num-traits = "0.2.19"
rand = "0.9.2"
